<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_home">首页</string>
    <string name="title_dashboard" tools:keep="@string/title_dashboard">看啊</string>
    <string name="title_notifications">发现</string>
    <string name="app_name">书稽</string>
    <string name="search">找啥</string>
    <string name="search_hint">你想瞅点儿啥？</string>
    <string name="book_author">作者</string>
    <string name="book_title">书名</string>
    <string name="hot_search">热门搜索</string>
    <string name="last_chapter_name">最后一章</string>
    <string name="time_text">时间</string>
    <string name="book_from">来源</string>
    <string name="unknown">未知</string>
    <string name="chapter_name">章节名称</string>
</resources>
