<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="searchItemModel"
            type="com.imamouse.combook.ui.search.list.SearchListItemModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        binding:onClickCommand="@{searchItemModel.itemClick}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radius_rectangle_greyblue50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBook"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book_title"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_book_init"
                binding:url="@{searchItemModel.imageUrl}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="10dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:ems="5"
                        android:gravity="center"
                        android:hint="@string/book_title"
                        android:text="@={searchItemModel.bookName}" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_book_author" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:ems="5"
                        android:gravity="center"
                        android:hint="@string/book_author"
                        android:text="@={searchItemModel.author}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="5"
                        android:gravity="center"
                        android:hint="@string/last_chapter_name"
                        android:text="@={searchItemModel.lastChapterName}" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="4"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_update_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:gravity="center"
                            android:hint="@string/time_text"
                            android:text="@={searchItemModel.lastUpdateTime}" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:gravity="bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:gravity="end"
                                android:text="@string/book_from"
                                android:textSize="10sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:gravity="center"
                                android:hint="@string/unknown"
                                android:text="@{searchItemModel.siteName}"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            binding:srcCompat="@drawable/shadow_diffusion" />

    </LinearLayout>
</layout><!--特别感谢--><!--作者：GIS小博工作室--><!--来源：CSDN--><!--原文：https://blog.csdn.net/GISuuser/article/details/51982294--><!--版权声明：本文为博主原创文章，转载请附上博文链接！-->