<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="infoModel"
            type="com.imamouse.combook.ui.book.BookInfoViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="310dp">

        <com.imamouse.combook.view.ArcImageView
            android:id="@+id/imageview_bookinfo_back"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:arcHeight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gradual_color_2" />

        <ImageView
            android:layout_width="111dp"
            android:layout_height="110dp"
            android:layout_marginTop="110dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageview_bookinfo_back"
            app:srcCompat="@drawable/ic_book_init"
            binding:url="@{infoModel.imageUrl}" />

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_book_author_808080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/book_author"
                android:text="@={infoModel.author}"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_book_info_lastpage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/last_chapter_name"
                    android:text="@={infoModel.lastChapterName}"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="更新时间"
                    android:text="@={infoModel.lastUpdateTime}"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="存储大小"
                    android:text="@={infoModel.chapterSize}"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/book_from"
            android:text="@={infoModel.siteName}"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>